added table borders

--- a/views/index.haml
+++ b/views/index.haml
@@ -5,7 +5,7 @@
     %link{ rel: "stylesheet", type: "text/css", href: "css/foundation.css" }
   %body
     %h1 Ruby CTCS
-    %table
+    %table{ border: "1" }
       %thead
         %tr
           %th IP
